--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 *.gem
 *.rbc
-/.config
+#/.config
 /coverage/
 /InstalledFiles
 /pkg/
 /spec/reports/
 /test/tmp/
 /test/version_tmp/
-/tmp/
+#/tmp/
 
 ## Specific to RubyMotion:
 .dat*
