--- a/test/fixtures/restaurantes.yml
+++ b/test/fixtures/restaurantes.yml
@@ -4,8 +4,16 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+#one: {}
 # column: value
 #
-two: {}
+#two: {}
 #  column: value
+fasano:
+  nome: Fasano
+  endereco: Rua Vergueiro
+  
+
+fogo_de_chao:
+  nome: Fogo de Chao
+  endereco: Avenida dos Bandeirantes
